--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,15 +54,16 @@
     </LinearLayout>
 
     <Button
+        android:onClick="onclick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="파일 목록 가져오기"
         android:id="@+id/button" />
 
-    <TextView
-        android:layout_width="358dp"
+    <EditText
+        android:layout_width="357dp"
         android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView"
-        android:layout_weight="1.11" />
+        android:id="@+id/editText"
+        android:layout_weight="1" />
+
 </LinearLayout>
